Criado o endpoint Message
